Separate header and apply color rules

--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="first">
     <div class="header">
-        <a>Header Logo</a>
+        <div class="logo">Header Logo</div>
         <a href="google.com">header link one</a>
         <a href="google.com">header link two</a>
         <a href="google.com">header link three</a>
      </div>
-    <div class="second">
+    <div class="hero">
         <div class="left">
-        <h1>This website is awesome</h1>
-        <h2>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</h2>
-        <div class="button">Sign up</div></div>
+            <h1>This website is awesome</h1>
+            <h2>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</h2>
+          <div class="button">Sign up</div>
+        </div>
         <div class="placeholder">this is a placeholder for an image</div>
     </div>
+</div>
 </body>
 </html>
