Begin second section of landing page

--- a/index.html
+++ b/index.html
@@ -21,8 +21,18 @@
             <h2>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</h2>
           <div class="button">Sign up</div>
         </div>
-        <div class="placeholder">this is a placeholder for an image</div>
+        <!-- <img src="square.png">-->
+        <div class="placeholder">this is a placeholder for an image</div> 
     </div>
 </div>
+<!--
+<div class="second">
+    <a>Some random information.</a>
+    <div class="boxes">
+        <img src="square.png">
+        <img src="square.png">
+        <img src="square.png">
+        <img src="square.png">
+    </div>
 </body>
 </html>
