--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
 <div class="first">
     <div class="header">
-        <div class="logo">Header Logo</div>
+        Header Logo
+    <div class="links">
         <a href="google.com">header link one</a>
         <a href="google.com">header link two</a>
         <a href="google.com">header link three</a>
-     </div>
+     </div></div>
     <div class="hero">
         <div class="left">
             <h1>This website is awesome</h1>
