Space header links and logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <a href="google.com">header link one</a>
         <a href="google.com">header link two</a>
         <a href="google.com">header link three</a>
-     </div></div>
+     </div>
+    </div>
     <div class="hero">
         <div class="left">
             <h1>This website is awesome</h1>
