Add and center blue squares

--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
         <div class="placeholder">this is a placeholder for an image</div> 
     </div>
 </div>
-<!--
 <div class="second">
-    <a>Some random information.</a>
-    <div class="boxes">
-        <img src="square.png">
-        <img src="square.png">
-        <img src="square.png">
-        <img src="square.png">
+    <div class="second-header">
+        Some random information.
     </div>
+    <div class="information">
+        <div class="boxes">this is some subtext under an illustration or image</div>
+        <div class="boxes">this is some subtext under an illustration or image</div>
+        <div class="boxes">this is some subtext under an illustration or image</div>
+        <div class="boxes">this is some subtext under an illustration or image</div>
+    </div></div>
+</div>
 </body>
 </html>
