--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             <h2>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</h2>
           <div class="button">Sign up</div>
         </div>
-        <!-- <img src="square.png">-->
         <div class="placeholder">this is a placeholder for an image</div> 
     </div>
 </div>
@@ -32,11 +31,17 @@
         Some random information.
     </div>
     <div class="information">
+        <div class="boxes">
+            <div>this is some subtext under an illustration or image</div>
+            </div>
+       <!-- <div class="boxes">this is some subtext under an illustration or image</div>
         <div class="boxes">this is some subtext under an illustration or image</div>
         <div class="boxes">this is some subtext under an illustration or image</div>
-        <div class="boxes">this is some subtext under an illustration or image</div>
-        <div class="boxes">this is some subtext under an illustration or image</div>
-    </div></div>
+    </div></div>-->
+</div>
+<div class="third">
+    <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+    <div class="attribution">-Thor, God of Thunder</div>
 </div>
 </body>
 </html>
