--- a/index.html
+++ b/index.html
@@ -31,14 +31,19 @@
         Some random information.
     </div>
     <div class="information">
-        <div class="boxes">
-            <div>this is some subtext under an illustration or image</div>
-            </div>
-       <!-- <div class="boxes">this is some subtext under an illustration or image</div>
-        <div class="boxes">this is some subtext under an illustration or image</div>
-        <div class="boxes">this is some subtext under an illustration or image</div>
-    </div></div>-->
-</div>
+        <div class="card">
+            <div class="boxes"></div>
+                <div class="boxes-subtext">this is some subtext under an illustration or image</div></div>
+        <div class="card">
+            <div class="boxes"></div>
+                <div class="boxes-subtext">this is some subtext under an illustration or image</div></div>
+        <div class="card">
+            <div class="boxes"></div>
+                <div class="boxes-subtext">this is some subtext under an illustration or image</div></div>
+        <div class="card">
+            <div class="boxes"></div>
+                <div class="boxes-subtext">this is some subtext under an illustration or image</div></div>
+</div></div>
 <div class="third">
     <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
     <div class="attribution">-Thor, God of Thunder</div>
