--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="left">
             <h1>This website is awesome</h1>
             <h2>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</h2>
-          <div class="button">Sign up</div>
+          <button class="button-one">Sign up</button>
         </div>
         <div class="placeholder">this is a placeholder for an image</div> 
     </div>
@@ -47,6 +47,11 @@
 <div class="third">
     <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
     <div class="attribution">-Thor, God of Thunder</div>
+</div>
+<div class="fourth">
+    <div class="action">
+        <button class="button-two">Sign up</button>
+    </div>
 </div>
 </body>
 </html>
