--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome</title>
     <link rel="stylesheet" href="style.css">
+    <link href="http://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
 </head>
 <body>
 <div class="first">
@@ -45,12 +46,18 @@
                 <div class="boxes-subtext">this is some subtext under an illustration or image</div></div>
 </div></div>
 <div class="third">
-    <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-    <div class="attribution">-Thor, God of Thunder</div>
+    <div class="quote-text">
+    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+    <div class="attribution">-Thor, God of Thunder</div></div>
 </div>
 <div class="fourth">
     <div class="action">
-        <button class="button-two">Sign up</button>
+        <div class="action-text">
+            <div class="action-left">
+            <h3>Call to action! It's time!</h3>
+            <h4>Sign up for our product by clicking that button right over there!</h4></div>
+            <button class="button-two">Sign up</button>
+        </div>
     </div>
 </div>
 </body>
