Align fourth section text, begin footer

--- a/index.html
+++ b/index.html
@@ -52,13 +52,17 @@
 </div>
 <div class="fourth">
     <div class="action">
-        <div class="action-text">
+        <div class="action-content">
             <div class="action-left">
             <h3>Call to action! It's time!</h3>
-            <h4>Sign up for our product by clicking that button right over there!</h4></div>
+            Sign up for our product by clicking that button right over there!
+            </div>
             <button class="button-two">Sign up</button>
         </div>
     </div>
+</div>
+<div class="fifth">
+    <div class="footer">Copyright © The Odin Project 2021</div>
 </div>
 </body>
 </html>
