Adjust text size

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="hero">
         <div class="left">
             <h1>This website is awesome</h1>
-            <h2>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</h2>
+            <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
           <button class="button-one">Sign up</button>
         </div>
         <div class="placeholder">this is a placeholder for an image</div> 
@@ -32,16 +32,16 @@
         Some random information.
     </div>
     <div class="information">
-        <div class="card">
+        <div class="box-wrapper">
             <div class="boxes"></div>
                 <div class="boxes-subtext">this is some subtext under an illustration or image</div></div>
-        <div class="card">
+        <div class="box-wrapper">
             <div class="boxes"></div>
                 <div class="boxes-subtext">this is some subtext under an illustration or image</div></div>
-        <div class="card">
+        <div class="box-wrapper">
             <div class="boxes"></div>
                 <div class="boxes-subtext">this is some subtext under an illustration or image</div></div>
-        <div class="card">
+        <div class="box-wrapper">
             <div class="boxes"></div>
                 <div class="boxes-subtext">this is some subtext under an illustration or image</div></div>
 </div></div>
@@ -55,14 +55,12 @@
         <div class="action-content">
             <div class="action-left">
             <h3>Call to action! It's time!</h3>
-            Sign up for our product by clicking that button right over there!
+            <div>Sign up for our product by clicking that button right over there!</div>
             </div>
             <button class="button-two">Sign up</button>
         </div>
     </div>
 </div>
-<div class="fifth">
-    <div class="footer">Copyright © The Odin Project 2021</div>
-</div>
+<div class="fifth">Copyright © The Odin Project 2021</div>
 </body>
 </html>
