Edit indentations in HTML

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <div class="first">
     <div class="header">
         Header Logo
-    <div class="links">
-        <a href="google.com">header link one</a>
-        <a href="google.com">header link two</a>
-        <a href="google.com">header link three</a>
-     </div>
+        <div class="links">
+            <a href="google.com">header link one</a>
+            <a href="google.com">header link two</a>
+            <a href="google.com">header link three</a>
+        </div>
     </div>
     <div class="hero">
-        <div class="left">
+        <div class="hero-left">
             <h1>This website is awesome</h1>
             <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
           <button class="button-one">Sign up</button>
@@ -44,18 +44,21 @@
         <div class="box-wrapper">
             <div class="boxes"></div>
                 <div class="boxes-subtext">this is some subtext under an illustration or image</div></div>
-</div></div>
+        </div>
+    </div>
+</div>
 <div class="third">
     <div class="quote-text">
-    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
-    <div class="attribution">-Thor, God of Thunder</div></div>
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+    <div class="attribution">-Thor, God of Thunder</div>
+    </div>
 </div>
 <div class="fourth">
     <div class="action">
         <div class="action-content">
             <div class="action-left">
-            <h3>Call to action! It's time!</h3>
-            <div>Sign up for our product by clicking that button right over there!</div>
+                <h3>Call to action! It's time!</h3>
+                <div>Sign up for our product by clicking that button right over there!</div>
             </div>
             <button class="button-two">Sign up</button>
         </div>
