Fix header font weight and third section padding

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="first">
     <div class="header">
-        Header Logo
+        <span class="logo">Header Logo</span>
         <div class="links">
             <a href="google.com">header link one</a>
             <a href="google.com">header link two</a>
