--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome</title>
     <link rel="stylesheet" href="style.css">
-    <link href="http://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
 </head>
 <body>
 <div class="first">
     <div class="header">
         <span class="logo">Header Logo</span>
         <div class="links">
-            <a href="google.com">header link one</a>
-            <a href="google.com">header link two</a>
-            <a href="google.com">header link three</a>
+            <a href="https://google.com">header link one</a>
+            <a href="https://google.com">header link two</a>
+            <a href="https://google.com">header link three</a>
         </div>
     </div>
     <div class="hero">
@@ -49,7 +48,7 @@
 </div>
 <div class="third">
     <div class="quote-text">
-        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
     <div class="attribution">-Thor, God of Thunder</div>
     </div>
 </div>
