Rectify call to action width

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
 <div class="first">
-    <div class="header">
-        <span class="logo">Header Logo</span>
-        <div class="links">
-            <a href="https://google.com">header link one</a>
-            <a href="https://google.com">header link two</a>
-            <a href="https://google.com">header link three</a>
+        <div class="header">
+            <span class="logo">Header Logo</span>
+                <div class="links">
+                    <a href="https://google.com">header link one</a>
+                    <a href="https://google.com">header link two</a>
+                    <a href="https://google.com">header link three</a>
+                </div>
         </div>
-    </div>
     <div class="hero">
         <div class="hero-left">
-            <h1>This website is awesome</h1>
+            <div class="hero-header">This website is awesome</div>
             <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
           <button class="button-one">Sign up</button>
         </div>
@@ -56,7 +56,7 @@
     <div class="action">
         <div class="action-content">
             <div class="action-left">
-                <h3>Call to action! It's time!</h3>
+                <div class="action-header">Call to action! It's time!</div>
                 <div>Sign up for our product by clicking that button right over there!</div>
             </div>
             <button class="button-two">Sign up</button>
