--- a/index.html
+++ b/index.html
@@ -10,22 +10,26 @@
 <body>
 <div class="first">
         <div class="header">
-            <span class="logo">Header Logo</span>
+            <span class="header-logo">Header Logo</span>
                 <div class="links">
-                    <a href="https://google.com">header link one</a>
-                    <a href="https://google.com">header link two</a>
-                    <a href="https://google.com">header link three</a>
+                    <a href="https:/google.com">header link one</a>
+                    <a href="https:/google.com">header link two</a>
+                    <a href="https:/google.com">header link three</a>
                 </div>
         </div>
-    <div class="hero">
-        <div class="hero-left">
-            <div class="hero-header">This website is awesome</div>
-            <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-          <button class="button-one">Sign up</button>
-        </div>
-        <div class="placeholder">this is a placeholder for an image</div> 
-    </div>
-</div>
+       <div class="hero-wrapper">
+            <div class="hero-left">
+                 <div class="hero-main-text">This website is awesome</div>
+                    <div class="hero-subtext">
+                        This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+                    <div class="button-wrapper"><button class="hero-button">Sign Up</button></div>
+                </div>
+            </div>
+            <div class="placeholder">
+                this is a placeholder for an image
+            </div>
+       </div>
+</div></div>
 <div class="second">
     <div class="second-header">
         Some random information.
@@ -59,7 +63,7 @@
                 <div class="action-header">Call to action! It's time!</div>
                 <div>Sign up for our product by clicking that button right over there!</div>
             </div>
-            <button class="button-two">Sign up</button>
+            <button class="action-button">Sign up</button>
         </div>
     </div>
 </div>
