--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <div class="hero-left">
                  <div class="hero-main-text">This website is awesome</div>
                     <div class="hero-subtext">
-                        This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+                        <a>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</a>
                     <div class="button-wrapper"><button class="hero-button">Sign Up</button></div>
                 </div>
             </div>
             <div class="placeholder">
-                this is a placeholder for an image
+                <div class="placeholder-text">this is a placeholder for an image</div>
             </div>
        </div>
 </div></div>
