--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </div>
 <div class="third">
     <div class="quote-text">
-        <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
+        <span>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</span>
     <div class="attribution">-Thor, God of Thunder</div>
     </div>
 </div>
